believe this is MVP.  solved alignment issue  added padding/margin to about page and index page

--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,9 @@ p {
     width: 800px;
     margin: 0 auto;
 }
-
+.container div{
+    margin-bottom: 2.5%;
+ }
 header {
     display: flex;
     margin: 2%;
@@ -170,56 +172,73 @@ footer nav a {
 .boxes .box:nth-of-type(1){
     background-color: teal;
 }
+
 .boxes .box:nth-of-type(2){
     background-color: gold;
 }
+
 .boxes .box:nth-of-type(3){
     background-color: cadetblue;
 }
+
 .boxes .box:nth-of-type(4){
     background-color: coral;
 }
+
 .boxes .box:nth-of-type(5){
     background-color: crimson;
 }
+
 .boxes .box:nth-of-type(6){
     background-color: forestgreen;
 }
+
 .boxes .box:nth-of-type(7){
     background-color: darkorchid;
 }
+
 .boxes .box:nth-of-type(8){
     background-color: hotpink;
 }
+
 .boxes .box:nth-of-type(9){
     background-color: indigo;
 }
+
 .boxes .box:nth-of-type(10){
     background-color: dodgerblue;
 }
+
 /* about page styles start here */
+
 .about {
+    padding-bottom: 2.5%; 
     border-bottom: 1px dashed;
 }
+
 .learnMore {
     display: flex;
     flex-wrap: wrap;
     margin: 2.5%;
 }
-/* To Do:
-    resolve issues aligning the divs */
+
 .learnMore div {
-    max-width:45%;
+    width:45%;
+    height:45%;
     border-bottom: 1px dashed;
     align-items: center;
     justify-content: space-between;
 }
+
 .learnMore img {
     align-items: stretch;
 }
+
 button {
     border: 2px solid black;
     background-color: white;
     border-radius: 12px;
     padding: 12px 28px;
+    margin-top: 3%;
+    margin-bottom: 4%;
 }
